--- a/LockWood/LockWood.csproj
+++ b/LockWood/LockWood.csproj
@@ -113,6 +113,7 @@
     </Compile>
     <Compile Include="PickerFillers\PickerFiller.cs" />
     <Compile Include="WebService\WebService.cs" />
+    <Compile Include="PickerFillers\NameModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
